# gipny-i2p

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.build  Dockerfile.win  MIGRATION-i2p.md  README.md  build.sh  run-e2e.sh
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  e2e-i2pd.yml  e2e.yml  i2pd-build.yml  relay-testnet.yml  release.yml
bot-sdk/: Cargo.toml  docs.md
bot-sdk/src/: lib.rs
core/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.xbox.conf.json
core/capabilities/: default.json
core/relay/: Cargo.toml  gipny-i2p-router.service  gipny-relay.service
core/relay/src/: main.rs  proto.rs  storage.rs
core/resources/: .gitkeep
core/src/: core.rs  lib.rs  main.rs  notify.rs  tray.rs
docker/: build-linux.sh  build-windows.sh  installer.nsi
docs/: go-i2p-leaseset-analysis.md  handoff-brief.md  i2p-transport-evaluation.md
docs/patches/: go-i2p-first-hop-selection.patch
i2p-router/: android_export.go  go.mod  go.sum  jni_shim_android.c  main.go  mock_sam.go  mock_sam_stub.go  wiring.go
libcore/: Cargo.toml
libcore/src/: crypto.rs  db.rs  lib.rs  net.rs  relay.rs  router.rs  security.rs  session.rs  update.rs
libcore/tests/: first_run.rs
tests/e2e-harness/: Cargo.toml
tests/e2e-harness/src/: main.rs
tools/: sam-eepsite.py  sam-probe.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: actions.ts  api.ts  app.ts  auth.ts  chat.ts  contact.ts  forward.ts  group.ts  identity.ts  main.ts  media.ts  profile.ts  search.ts  security.ts  settings.ts  sidebar.ts  state.ts  styles.css  view.ts
ui/src/themes/: xbox.css
