[workspace]
resolver = "2"
members = [
    "core",
    "libcore",
    "bot-sdk",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = "3.0"
thiserror = "2"
anyhow = "1"
rand = "0.9"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = "3"
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
hkdf = "0.13"
hmac = "0.13"
sha2 = "0.11"
argon2 = "0.5"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
# i2p transport: SAMv3 client. `async-extra` enables detached (concurrent) stream dials.
yosemite = { version = "0.7", features = ["async-extra"] }
futures = "0.3"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"