[workspace]
resolver = "2"
members = [
    "core",
    "libcore",
    "bot-sdk",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = "1.3"
thiserror = "1"
anyhow = "1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# i2p transport: SAMv3 client. `async-extra` enables detached (concurrent) stream dials.
yosemite = { version = "0.7", features = ["async-extra"] }
futures = "0.3"
libc = "0.2"

[profile.release]
# "s" over 3: the app is network-bound (i2p tunnels dominate latency) and the
# slow path that matters, Argon2id, is deliberately slow by parameter choice —
# trading a little raw crypto throughput for a substantially smaller binary.
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"