[workspace]
resolver = "2"
members = [
    "core",
    "libcore",
    "bot-sdk",
    "tests/e2e-harness",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = "1.3"
thiserror = "1"
anyhow = "1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# i2p transport: SAMv3 client. `async-extra` enables detached (concurrent) stream dials.
yosemite = { version = "0.7", features = ["async-extra"] }
futures = "0.3"
libc = "0.2"

[profile.release]
# "s" over 3 for the app code: it is network-bound (i2p tunnels dominate
# latency), so we trade raw throughput for a smaller binary. The crypto crates
# below are pinned back to opt-level 3 — KDF/AEAD/curve math is the one place
# compiler opts translate directly into user-visible unlock/handshake time.
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.argon2]
opt-level = 3
[profile.release.package.blake2]
opt-level = 3
[profile.release.package.sha2]
opt-level = 3
[profile.release.package.digest]
opt-level = 3
[profile.release.package.hkdf]
opt-level = 3
[profile.release.package.hmac]
opt-level = 3
[profile.release.package.chacha20]
opt-level = 3
[profile.release.package.chacha20poly1305]
opt-level = 3
[profile.release.package.poly1305]
opt-level = 3
[profile.release.package.curve25519-dalek]
opt-level = 3
[profile.release.package.ed25519-dalek]
opt-level = 3
[profile.release.package.x25519-dalek]
opt-level = 3