[package]
name = "gipny-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "gipny_bot"
path = "src/lib.rs"

[dependencies]
gipny-libcore = { path = "../libcore" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
