[workspace]

[package]
name = "gipny-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gipny-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
arti-client = { version = "0.23", features = ["tokio", "rustls", "onion-service-service"] }
tor-hsservice = "0.23"
tor-rtcompat = { version = "0.23", features = ["tokio"] }
tor-cell = "0.23"
ed25519-dalek = "2"
rand = "0.8"
futures = "0.3"
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true