[workspace]

[package]
name = "gipny-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gipny-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = { version = "2", features = ["serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
yosemite = "0.7"
ed25519-dalek = "3"
rand = "0.10"
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true